fix:emojiteditText setText不替换表情

--- a/app-androidx/src/main/res/layout/common_chat_layout.xml
+++ b/app-androidx/src/main/res/layout/common_chat_layout.xml
@@ -132,7 +132,7 @@
                         android:src="@drawable/icon_add" />
 
                     <!-- 输入入口 -->
-                    <EditText
+                    <com.xxf.keyboard.emotion.component.EmotionEditText
                         android:id="@+id/edit_text"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
